--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,23 +1,35 @@
 @font-face
-  font-family: 'icomoon'
-  src:  url('../../common/fonts/icomoon.eot?ym6716')
-  src:  url('../../common/fonts/icomoon.eot?ym6716#iefix') format('embedded-opentype'),
-    url('../../common/fonts/icomoon.ttf?ym6716') format('truetype'),
-    url('../../common/fonts/icomoon.woff?ym6716') format('woff'),
-    url('../../common/fonts/icomoon.svg?ym6716#icomoon') format('svg')
-  font-weight: normal
-  font-style: normal
+  font-family: 'icomoon';
+  src:  url('../../common/fonts/icomoon.eot?a701mz');
+  src:  url('../../common/fonts/icomoon.eot?a701mz#iefix') format('embedded-opentype'),
+    url('../../common/fonts/icomoon.ttf?a701mz') format('truetype'),
+    url('../../common/fonts/icomoon.woff?a701mz') format('woff'),
+    url('../../common/fonts/icomoon.svg?a701mz#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
 
 [class^="icon-"], [class*=" icon-"]
-  font-family: 'icomoon' !important
-  speak: none
-  font-style: normal
-  font-weight: normal
-  font-variant: normal
-  text-transform: none
-  line-height: 1
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
 
-.icon-close:before
-  content: "\ea0f"
+.icon-shopping-cart:before
+  content: "\e900";
+
+.icon-cart:before
+  content: "\e93a";
+
+.icon-cross:before
+  content: "\ea0f";
 
